UPDATE: Sub category Landing page 1. added bottom sheet assets 2. Added dummy data to handle title and subtitle change 3. product item: aligning right section to end 4. search bar: fix the dataAid

--- a/react_webviews/src/designSystem/molecules/ProductItem/ProductItem.scss
+++ b/react_webviews/src/designSystem/molecules/ProductItem/ProductItem.scss
@@ -12,6 +12,7 @@
     align-self: baseline;
     min-width: fit-content;
     margin-left: auto;
+    align-items: flex-end;
     &> * {
       margin-left: 10px;
     }
