--- a/react_webviews/src/featureComponent/DIY/Filters/FilterReturnBottomSheet.scss
+++ b/react_webviews/src/featureComponent/DIY/Filters/FilterReturnBottomSheet.scss
@@ -1,8 +1,10 @@
 .filter-return-wrapper {
   .fr-title-wrapper {
     position: relative;
-    > img {
+    margin-bottom: 16px;
+    > button {
       position: absolute;
+      left: 0;
     }
     > p {
       flex: 1;
@@ -32,8 +34,8 @@
       .MuiDialog-paper {
         margin: 0px !important;
         max-width: var(--desktop-width);
-        border-top-left-radius: 12px;
-        border-top-right-radius: 12px;
+        border-top-left-radius: 16px;
+        border-top-right-radius: 16px;
       }
     }
   }
